--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,11 @@
+
 .container {
+  padding: var(--spacing-32) var(--spacing-48);
+  font-size: var(--font-size-body);
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  padding: var(--spacing-24) var(--spacing-48);
   border-bottom: 1px solid var(--color-border);
   background: var(--color-background);
   position: relative;
